# ansible2nix

./: Makefile  README.md  ansible.nix  ansible2nix.nix  flake.nix  pyproject.toml  requirements.yml  setup.py
ansible2nix/: ansible2nix.py
tests/: requirements.nix  test.nix
